<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HitungActivity">

    <LinearLayout
        android:id="@+id/body_hitung"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/hitung_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lang_hitung_title"
            android:textAlignment="center"
            android:textSize="24sp"
            />

        <EditText
            android:id="@+id/et_bill_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:tooltipText="@string/lang_tip_angka1"
            android:hint="@string/lang_tip_angka1"
            />

        <EditText
            android:id="@+id/et_bill_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:tooltipText="@string/lang_tip_angka2"
            android:hint="@string/lang_tip_angka2"
            />

        <Button
            android:id="@+id/btn_hitung_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lang_btn_hitung" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/hitung_box_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#efefef"
            android:orientation="vertical"
            android:padding="20sp">

            <TextView
                android:id="@+id/title_result_hitung"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lang_result_title_hitung"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/result_hitung"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="40sp" />
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>